@@ -45,8 +45,6 @@ gio/gmountoperation.c
 gio/goutputstream.c
 gio/gseekable.c
 gio/gsimpleasyncresult.c
-gio/gsocketinputstream.c
-gio/gsocketoutputstream.c
 gio/gunixdrive.c
 gio/gunixvolume.c
 gio/gvolume.c
@@ -83,9 +81,9 @@ gio/gmountoperation.c
 gio/goutputstream.c
 gio/gseekable.c
 gio/gsimpleasyncresult.c
-gio/gsocketinputstream.c
-gio/gsocketoutputstream.c
 gio/gunixdrive.c
+gio/gunixinputstream.c
+gio/gunixoutputstream.c
 gio/gunixvolume.c
 gio/gvolume.c
 gio/gvolumemonitor.c
