@@ -1,3 +1,7 @@
+2007-11-27  Andre Klapper  <a9016009@gmx.de>
+
+        * POTFILES.in: Updated gio sources.
+
 2007-11-26  Alexander Larsson  <alexl@redhat.com>
 
         * POTFILES.in:
